Initial firebase migration completed

--- a/src/Content/MainPage/Cards/Fixed-wireless/Query_Subscriber/Subscriber_Details/SubscriberDetails.css
+++ b/src/Content/MainPage/Cards/Fixed-wireless/Query_Subscriber/Subscriber_Details/SubscriberDetails.css
@@ -26,3 +26,8 @@
     width: 400px;
     margin-top: 20px;
 }
+.attribute-display{
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
