--- a/src/Content/MainPage/Cards/Fixed-wireless/Create_Subscriber/CreateSubscriber.css
+++ b/src/Content/MainPage/Cards/Fixed-wireless/Create_Subscriber/CreateSubscriber.css
@@ -30,3 +30,20 @@ label{
     text-align: left;
     padding-bottom: 0.5vh;
 }
+.MuiBackdrop-root1{
+    z-index: 1201;
+    color: transparent;
+}
+.tabroot{
+    background-color: #f8f8ff;
+    border-style: solid;
+    border-top-style: none;
+    height: 78vh;
+    border-color: #ebeefa;
+    border-width: 4px;
+}
+.MuiTab-wrapper{
+    font-family: "Muli";
+    font-weight: bolder;
+    font-size: 17px;
+}
