--- a/src/Content/MainPage/Cards/Fixed-wireless/Query_Subscriber/Subscriber_Details/SubscriberDetails.css
+++ b/src/Content/MainPage/Cards/Fixed-wireless/Query_Subscriber/Subscriber_Details/SubscriberDetails.css
@@ -31,3 +31,28 @@
     overflow-y: scroll;
     overflow-x: hidden;
 }
+.modal{
+    display: flex;
+    align-items: center;
+    justify-content: center;   
+  }
+.paper{
+    margin-left: 25em;
+    background-color: papayawhip;
+    border: '2px solid #000';
+    box-shadow: 5;
+    padding: (2, 4, 3);
+    width: '60%'
+  }
+.paper_map {
+    margin-left:'15em';
+    background-color: papayawhip;
+    border: '2px solid #000';
+    box-shadow: 5;
+    padding: (2, 4, 3);
+    width: '60%'
+    }
+.Formlabel {
+    font-style: 'Muli';
+    font-weight: 'bold';
+    }
