--- a/src/Content/MainPage/Cards/Sophosaas/SaasCard.css
+++ b/src/Content/MainPage/Cards/Sophosaas/SaasCard.css
@@ -1,3 +1,70 @@
 .backcolor{
     background-color: #F7F8FC;    
 }
+.imageicons {
+    height: 25px;
+    width: 33px;
+    border-radius: 10px;
+    }
+.imageicon {
+    height:190px;
+    width: 80px;
+    justify-content: center;
+    border-radius: 10px;
+    padding-top: 30px;
+    padding-bottom: 80px;
+    }
+.separator {
+    padding-top: 20px;
+    border-top: 0.5vh solid;
+    padding: 0px;
+    left: 0px;
+    margin-top: 10px;
+    opacity: 0.06
+}
+.text{
+    padding-top: 7px;
+    padding-left: 10px;
+    font-family: 'Muli';
+    font-size: 17px;
+    font-weight: bold;
+    line-height: 12px;
+    letter-spacing: 0.2px;
+    color: black;
+}
+.tableHeader{
+    font-family: "Muli";
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 12px;
+}
+.tableRow{
+    width: 100%;
+}
+.cardValue{
+    display: flex;
+    justify-content: flex-end;
+}
+.cardValueText{
+    font-family: "Muli";
+    font-weight: bold;
+    font-size: 55px;
+    padding-right: 24px;
+}
+.cardTitle{
+    width: 25px;
+    height: 25px;
+    padding: 2px;
+}
+.cardTitleText{
+    padding-left: 45px;
+    font-family: "Muli";
+    font-weight: bold;
+}
+.cards{
+    width: 370px;
+    height: 180px;
+}
+.cardsRow{
+    margin-top: 30px;
+}
